--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ color __________________________________________________________________________
 /* Container styles */
 .container {
   width: 100%;
-  max-width: 75rem;
+  max-width: 80rem;
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem; /* Optional padding */
@@ -36,4 +36,18 @@ color __________________________________________________________________________
   margin: 0 auto !important;
 }
 
+.d-flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.border {
+  border: 1px solid #ccc;
+}
+.h-full {
+  height: 100vh;
+}
+.text-center {
+  text-align: center;
+}
 /*________________________________________________________________________GLOBAL STYLES_____________________________________________________________________________ */
