--- a/styles/global.css
+++ b/styles/global.css
@@ -148,7 +148,71 @@
   text-align: center;
   margin-top: 30px;
 }
-/* .circle__image-heroSection:before{
-
-} */
 /* Hero Section */
+
+/* showcase section */
+.showcase__section {
+  background-color: white;
+  padding-block: 120px;
+}
+
+.showcase__wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.text__base-section {
+  grid-column-start: 1;
+  grid-column: span 2;
+}
+.right__side-Section {
+  grid-column-start: 4;
+  grid-column-end: 6;
+}
+
+.text__base__typography {
+  margin-top: 50px;
+}
+
+.text__base__typography p {
+  font-family: switzer-variable;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 31.68px;
+}
+
+.box__div__wrapper {
+  display: grid;
+  gap: 100px 0px;
+}
+
+.box__div__wrapper div p {
+  color: var(--dark__teal-color);
+  font-family: switzer-variable;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 31.68px;
+  text-align: left;
+}
+.box__div__wrapper div h4 {
+  color: var(--dark__teal-color);
+  font-family: boska-variable;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 130px;
+  text-align: left;
+  margin-top: -30px;
+}
+.showcase__box {
+  display: flex;
+  align-items: flex-end;
+  gap: 0px 10px;
+}
+.showcase__box span {
+  margin-bottom: 20px;
+  font-family: switzer-variable;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 31.68px;
+}
+/* showcase section */
