--- a/styles/global.css
+++ b/styles/global.css
@@ -321,6 +321,7 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   place-content: center;
+  align-items: center;
   gap: 0px 100px;
 
   padding-block: 100px;
@@ -346,25 +347,230 @@
   font-weight: 400;
   line-height: 23.76px;
   text-align: left;
+  margin-top: 15px;
 }
 
-.get__to__know__text button {
+.lets__talk__btn {
+  margin-top: 60px;
+}
+
+.link__section {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  min-height: 20rem;
+}
+
+.about__box {
+  background-color: var(--light__green-color);
+}
+.same__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: span 3;
+
+  position: relative;
+}
+.same__box div h2 {
+  font-family: boska-variable;
+  font-size: 68px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 88.4px;
+  text-align: left;
+}
+.same__box div p {
   font-family: switzer-variable;
-  background-color: transparent;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 30px 150px;
-  border: 1px solid var(--dark__teal-color);
-  border-radius: 40px;
-  margin-top: 50px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.12px;
+  text-align: left;
+}
+.same__box div img {
+  position: absolute;
+  right: 40px;
+  bottom: 50px;
+}
+.others__box {
+  grid-column-start: 4;
+  grid-column-end: 12;
+  background-color: var(--dark__teal-color);
+  color: white;
+
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.others__box h2 {
+  font-family: boska-variable;
+  font-size: 68px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 88.4px;
+  text-align: left;
+}
+.others__box p {
+  font-family: switzer-variable;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.12px;
+  text-align: left;
+}
+.rooms {
+  position: relative;
+}
+.rooms__heading {
+  gap: 0px 20px;
+}
+.contact__heading {
+  gap: 0px 20px;
 }
 
 /* Get to know each other */
 
+/* Experience the magic of wilderness */
+.experience__the__magic {
+  background: #f9f9f9;
+  padding-block: 70px;
+}
+.experience__the__magic__heading {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  gap: 0px 20px;
+}
+.experience__the__magic__heading h2 {
+  font-family: boska-variable;
+  font-size: 68px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 88.4px;
+  text-align: left;
+}
+.experience__the__magic__heading p {
+  font-family: switzer-variable;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.76px;
+  text-align: left;
+}
+.experience__grid__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 150px;
+  margin-left: 355px;
+}
+.experience__grid__card {
+  position: relative;
+}
+
+.experience__grid__card img {
+  width: 378px;
+  height: 477px;
+}
+.card__text__box {
+  background-color: white;
+  width: 426px;
+  height: 152px;
+  position: absolute;
+  bottom: 10px;
+  left: -70px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0px;
+}
+
+.card__text__box::after {
+  content: "";
+  width: 100%;
+  background-image: url(/assets/svg/gradient.svg);
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 4cqmin;
+}
+.card__text__box h6 {
+  font-family: switzer-variable;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.12px;
+  text-align: left;
+}
+.card__text__box p {
+  font-family: switzer-variable;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.12px;
+  text-align: left;
+}
+
+/* Experience the magic of wilderness */
+
+/* our unique rooms */
+.our__unique__rooms {
+  padding-block: 70px;
+}
+
+.our__unique__rooms__heading h2 {
+  max-width: 49rem;
+  font-family: boska-variable;
+  font-size: 68px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 88.4px;
+  text-align: left;
+}
+
+.our__unique__rooms__card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  gap: 0px 20px;
+  margin-top: 70px;
+}
+.our__unique__rooms__card img:nth-child(1) {
+  width: 378px;
+  height: 505.68px;
+  grid-column: 1;
+  grid-row-start: 2;
+  grid-row-end: 8;
+}
+.our__unique__rooms__card img:nth-child(3) {
+  width: 378px;
+  height: 505.68px;
+  grid-column: 3;
+  grid-row-start: 2;
+  grid-row-end: 8;
+}
+.our__unique__rooms__card img:nth-child(2) {
+  width: 582px;
+  height: 778.32px;
+  grid-row-start: 1;
+  grid-row-end: 12;
+}
+/* our unique rooms */
+
 /* Footer section */
 .footer__section {
-  background-color: var(--light__green-color);
-  padding-block: 100px;
-  margin-top: 100px;
+  background-color: white;
+  padding-block: 17px;
+}
+.footer__section nav ul {
+  gap: 0px 50px;
+}
+.footer__section nav ul li {
+  list-style: none;
+}
+.footer__section nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-family: switzer-variable;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.76px;
 }
 /* Footer section */
