--- a/styles/global.css
+++ b/styles/global.css
@@ -529,6 +529,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(7, 1fr);
+  justify-items: stretch;
   gap: 0px 20px;
   margin-top: 70px;
 }
@@ -538,6 +539,7 @@
   grid-column: 1;
   grid-row-start: 2;
   grid-row-end: 8;
+  justify-self: end;
 }
 .our__unique__rooms__card img:nth-child(3) {
   width: 378px;
@@ -545,12 +547,14 @@
   grid-column: 3;
   grid-row-start: 2;
   grid-row-end: 8;
+  justify-self: start;
 }
 .our__unique__rooms__card img:nth-child(2) {
   width: 582px;
   height: 778.32px;
   grid-row-start: 1;
   grid-row-end: 12;
+  justify-self: center;
 }
 /* our unique rooms */
 
